--- a/frontend/src/pages/Events/Events.module.scss
+++ b/frontend/src/pages/Events/Events.module.scss
@@ -1,8 +1,10 @@
 $primary-green: #4CAF50;
 $primary-dark: #2C3E50;
-$white: #FFFFFF;
+$white: #ecebeb;
 $light-gray: #24292e;
+$primary-gray: #2e343a;
 $error-red: #E74C3C;
+$primary-light: #99bb72;
 
 .eventsContainer {
   width: 100%;
@@ -17,14 +19,15 @@ $error-red: #E74C3C;
   align-items: center;
   margin-bottom: 30px;
   padding: 20px;
-  background-color: $white;
+  background-color: $primary-gray;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
+  flex-wrap: wrap;
   h1 {
-    color: $primary-dark;
+    color: $white;
     margin: 0;
     font-size: 2rem;
+    flex: 1 1 auto;
   }
 }
 
@@ -32,7 +35,7 @@ $error-red: #E74C3C;
   background: none;
   border: none;
   cursor: pointer;
-  color: $primary-dark;
+  color: $white;
   display: flex;
   align-items: center;
   transition: color 0.2s ease;
@@ -59,8 +62,11 @@ $error-red: #E74C3C;
 }
 
 .actions {
-  margin-bottom: 30px;
-  text-align: right;
+  margin: 20px 0;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0; 
+  flex-wrap: wrap;
 }
 
 .createButton {
@@ -158,4 +164,19 @@ $error-red: #E74C3C;
   .actions {
     text-align: center;
   }
+}
+
+.mapContainer {
+  margin: 20px 0;
+  width: 100%;
+  height: 400px;
+
+  .ymaps-2-1-79-map {
+    border-radius: 12px;
+    overflow: hidden;
+    z-index: 0;
+  }
+
+  border-bottom: 2px solid $white;
+  padding-bottom: 430px;
 }
