--- a/frontend/src/pages/Events/components/CreateEventModal/CreateEventModal.module.scss
+++ b/frontend/src/pages/Events/components/CreateEventModal/CreateEventModal.module.scss
@@ -117,7 +117,7 @@
 
 .cancelButton {
   background-color: $light-gray;
-  color: $primary-dark;
+  color: $white;
   border: none;
   padding: 12px 24px;
   border-radius: 6px;
