fix: исправлены компоненты

--- a/frontend/src/components/EventCard/EventCard.module.scss
+++ b/frontend/src/components/EventCard/EventCard.module.scss
@@ -1,4 +1,4 @@
-@import '../../Events.module.scss';
+@import '../../pages/Events/Events.module.scss';
 
 .eventCard {
   background-color: $primary-gray;
